--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/wp1.jpg" alt="City view picture"></td>
+        <td><img src="images/wp2.png" alt="Nature"></td>
         <td><h1>Henry</h1>
         <p><em>User of <strong><a href="http://www.google.com/">Google Search</a></strong>.</em></p>
-        <p>I am an iOS and Web Developer. I ❤️ coffee and sports.</p></td>
+        <p>I am an iOS and Web Developer. I ❤️ sports.</p></td>
       </tr>
     </table>
     <hr>
@@ -59,10 +59,6 @@
        <tr>
         <td>Programming</td>
         <td>⭐️⭐️⭐️⭐️⭐️</td>
-      </tr>
-      <tr>
-        <td>Photography</td>
-        <td>⭐️⭐️</td>
       </tr>
     </table>
     <hr>
