update image file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="Images/wp1.jpg" alt="City View"></td>
+        <td><img src="Images/wp2.png" alt="City View"></td>
         <td><h1>Henry</h1>
         <p><em>User of <strong><a href="http://www.google.com/">Google Search</a></strong>.</em></p>
         <p>I am an iOS and Web Developer. I love sports.</p></td>
